@@ -103,7 +103,7 @@ def numpy2rpy(o):
         for field_name in o.dtype.names:
             df_args.append((field_name,
                             conversion.py2rpy(o[field_name])))
-        res = ro.baseenv["data.frame"].rcall(tuple(df_args), ro.globalenv)
+        res = ro.baseenv["data.frame"].rcall(tuple(df_args))
     # It should be impossible to get here:
     else:
         raise ValueError('Unknown numpy array type "%s".' % str(o.dtype))
